# rnpYandexDirect_tg_bot

./: .env.example  .gitignore  LICENSE  README.md  install.sh  main.py  pyproject.toml  requirements.txt
bot/: README.md  handlers.py  keyboards.py
connectors/: README.md  __init__.py  yandex_direct.py
database/: README.md  db.py
enums/: README.md  __init__.py  sources.py
models/: README.md  __init__.py  account.py  yandex_direct.py
modules/: README.md  __init__.py  base_report_builder.py  report_builder_factory.py
modules/yandex_direct/: budget_formatter.py  pandas_stat_proccessor.py  summary_statistics_formatter.py  yandex_direct_report_builder.py
services/: README.md  report_processor.py
settings/: README.md  __init__.py  report_settings.py  yandex_direct.py
tests/: test_db.py  test_pandas_stat_processor.py  test_report_processor.py  test_yandex_direct.py  test_yandex_direct_report_builder.py
